--- a/src/index.html
+++ b/src/index.html
@@ -95,14 +95,17 @@
     </section>
 
     <!-- About Section -->
-    <section id="About" style="background-color: #eeeeee; padding: 5% 0">
+    <section id="About" style="background-color: #eeeeee; padding: 7% 0">
       <div class="container">
         <div class="about-header">
-          <h2 class="behind-text">ABOUT</h2>
-          <h1 class="main-text">ABOUT ME</h1>
+          <div class="text-container">
+            <h2 class="behind-text">ABOUT</h2>
+            <h1 class="main-text">ABOUT ME</h1>
+          </div>
         </div>
 
-        <div class="row">
+        <div class="row mt-5">
+          <!-- mt-5 adds a top margin -->
           <!-- Image -->
           <div class="col-md-6">
             <img src="./gallery/pfp.png" alt="Juan Moncayo" class="about-pic" />
@@ -112,22 +115,198 @@
           <div class="col-md-6">
             <h3>Web Developer & Student</h3>
             <p>
-              [Your Description Here: Include the honesty statement and any other relevant info
-              about you.]
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus interdum cursus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus interdum cursus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus interdum cursus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus interdum cursus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus interdum cursus.
             </p>
 
             <div class="academic-details">
-              <ul>
+              <!-- First half of the list -->
+              <ul class="list-column">
                 <li><strong>Name:</strong> Juan Moncayo</li>
                 <li><strong>Student ID:</strong> 112572227</li>
                 <li><strong>Course:</strong> WEB222</li>
+              </ul>
+
+              <!-- Second half of the list -->
+              <ul class="list-column">
                 <li><strong>Section:</strong> NHH</li>
                 <li><strong>Professor:</strong> Robin Li</li>
+                <li><strong>Favorite Artist:</strong> [Artist Name]</li>
               </ul>
             </div>
 
             <!-- Hire Me Button -->
             <a href="#" class="btn btn-hire-me">Hire Me</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Education & Experience Section -->
+    <section id="EducationExperience" style="background-color: #eeeeee; padding: 5% 0">
+      <div class="container">
+        <div class="education-experience-header text-container">
+          <h2 class="behind-text">QUALITY</h2>
+          <h1 class="main-text">EDUCATION & EXPERIENCE</h1>
+        </div>
+
+        <!-- Two columns for Education and Experience -->
+        <div class="row">
+          <div class="col-md-6">
+            <!-- Education Timeline -->
+            <h3>My Education</h3>
+            <div class="timeline">
+              <div class="timeline-item">
+                <div class="timeline-icon">
+                  <i class="material-symbols-outlined">adjust</i>
+                </div>
+                <div class="timeline-content">
+                  <p>
+                    Placeholder text for visualization. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Sed sit amet justo vitae nibh vulputate cursus a at orci. Donec
+                    pharetra odio with placerat.
+                  </p>
+                </div>
+              </div>
+              <div class="timeline-item">
+                <div class="timeline-icon">
+                  <i class="material-symbols-outlined">adjust</i>
+                </div>
+                <div class="timeline-content">
+                  <p>
+                    Placeholder text for visualization. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Sed sit amet justo vitae nibh vulputate cursus a at orci. Donec
+                    pharetra odio with placerat.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <!-- Experience Timeline -->
+            <h3>My Experience</h3>
+            <div class="timeline">
+              <div class="timeline-item">
+                <div class="timeline-icon">
+                  <i class="material-symbols-outlined">adjust</i>
+                </div>
+                <div class="timeline-content">
+                  <p>
+                    Placeholder text for visualization. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Sed sit amet justo vitae nibh vulputate cursus a at orci. Donec
+                    pharetra odio with placerat.
+                  </p>
+                </div>
+              </div>
+              <div class="timeline-item">
+                <div class="timeline-icon">
+                  <i class="material-symbols-outlined">adjust</i>
+                </div>
+                <div class="timeline-content">
+                  <p>
+                    Placeholder text for visualization. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Sed sit amet justo vitae nibh vulputate cursus a at orci. Donec
+                    pharetra odio with placerat.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="Skills" style="background-color: #eeeeee; padding: 5% 0">
+      <div class="container">
+        <div class="text-container">
+          <h2 class="behind-text">SKILLS</h2>
+          <h1 class="main-text">MY SKILLS</h1>
+        </div>
+
+        <!-- Skill Bars -->
+        <div class="mt-5 row">
+          <!-- Skill Progress Bars -->
+          <div class="col-md-6">
+            <div class="skill-bar">
+              <div class="skill-label">HTML</div>
+              <div class="progress skill-progress">
+                <div
+                  class="progress-bar bg-color1"
+                  role="progressbar"
+                  style="width: 90%"
+                  aria-valuenow="90"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+              <div class="skill-percentage">90%</div>
+            </div>
+
+            <div class="skill-bar">
+              <div class="skill-label">CSS</div>
+              <div class="progress skill-progress">
+                <div
+                  class="progress-bar bg-color2"
+                  role="progressbar"
+                  style="width: 75%"
+                  aria-valuenow="75"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+              <div class="skill-percentage">75%</div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="skill-bar">
+              <div class="skill-label">JavaScript</div>
+              <div class="progress skill-progress">
+                <div
+                  class="progress-bar bg-color3"
+                  role="progressbar"
+                  style="width: 70%"
+                  aria-valuenow="70"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+              <div class="skill-percentage">70%</div>
+            </div>
+
+            <div class="skill-bar">
+              <div class="skill-label">C</div>
+              <div class="progress skill-progress">
+                <div
+                  class="progress-bar bg-color4"
+                  role="progressbar"
+                  style="width: 85%"
+                  aria-valuenow="85"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+              <div class="skill-percentage">85%</div>
+            </div>
+
+            <div class="skill-bar">
+              <div class="skill-label">C++</div>
+              <div class="progress skill-progress">
+                <div
+                  class="progress-bar bg-color5"
+                  role="progressbar"
+                  style="width: 65%"
+                  aria-valuenow="65"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+              <div class="skill-percentage">65%</div>
+            </div>
           </div>
         </div>
       </div>
@@ -146,6 +325,10 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/0a2e72e045.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <script src="./js/typed-config.js" async></script>
     <script src="./js/scripts.js" async></script>
   </body>
