--- a/src/index.html
+++ b/src/index.html
@@ -38,42 +38,57 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light hidden-navbar">
-      <a class="navbar-brand" href="#">Your Logo</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#Home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#About">About</a>
-          </li>
-          <!-- ... (rest of the navbar items) ... -->
-        </ul>
-      </div>
+        <a class="navbar-brand" href="#">
+          <img src="./gallery/logo.png" alt="Your Logo" style="height:100px;" class="d-inline-block align-top">
+        </a>
+        <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+        >
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#Home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#About">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#EducationExperience">Experience</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Skills">Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Portfolio">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Contact">Contact</a>
+                </li>
+            </ul>
+        </div>
     </nav>
+</body>
+
 
     <!-- Banner -->
-    <section class="banner" style="background-color: #222831">
+    <section id="Home" class="banner" style="background-color: #222831">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-5">
-            <img src="./gallery/pfp.png" alt="Juan Moncayo" class="profile-pic" />
+            <img src="./gallery/pfp.jpeg" alt="Juan Moncayo" class="profile-pic" />
           </div>
           <div class="col-md-7">
             <p class="small-text" style="color: #eeeeee">I'm</p>
             <h1 style="color: #eeeeee">Juan Moncayo</h1>
-            <p id="dynamic-text" style="color: #eeeeee"></p>
+            <span id="dynamic-text" style="color: #eeeeee"></span>
             <div class="buttons">
               <a href="path_to_your_cv.pdf" class="btn btn-custom" download>Download CV</a>
               <a
@@ -108,20 +123,17 @@
           <!-- mt-5 adds a top margin -->
           <!-- Image -->
           <div class="col-md-6">
-            <img src="./gallery/pfp.png" alt="Juan Moncayo" class="about-pic" />
+            <img src="./gallery/about.jpg" alt="Juan Moncayo" class="about-pic" />
           </div>
 
           <!-- Description -->
           <div class="col-md-6">
             <h3>Web Developer & Student</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus interdum cursus.
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus interdum cursus.
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus interdum cursus.
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus interdum cursus.
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus interdum cursus.
+              I declare that this assignment is my own work in accordance with Seneca Academic
+              Policy. No part of this assignment has been copied manually or electronically from any
+              other source (including web sites) or distributed to other students.
             </p>
-
             <div class="academic-details">
               <!-- First half of the list -->
               <ul class="list-column">
@@ -134,12 +146,12 @@
               <ul class="list-column">
                 <li><strong>Section:</strong> NHH</li>
                 <li><strong>Professor:</strong> Robin Li</li>
-                <li><strong>Favorite Artist:</strong> [Artist Name]</li>
+                <li><strong>Favorite Artist:</strong> Mac DeMarco</li>
               </ul>
             </div>
 
             <!-- Hire Me Button -->
-            <a href="#" class="btn btn-hire-me">Hire Me</a>
+            <a href="#Contact" class="btn btn-hire-me">Hire Me</a>
           </div>
         </div>
       </div>
@@ -164,11 +176,8 @@
                   <i class="material-symbols-outlined">adjust</i>
                 </div>
                 <div class="timeline-content">
-                  <p>
-                    Placeholder text for visualization. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Sed sit amet justo vitae nibh vulputate cursus a at orci. Donec
-                    pharetra odio with placerat.
-                  </p>
+                  <b>High School Diploma</b> <br />
+                  <p>Didn't graduate at the top of my class but I managed.</p>
                 </div>
               </div>
               <div class="timeline-item">
@@ -176,11 +185,9 @@
                   <i class="material-symbols-outlined">adjust</i>
                 </div>
                 <div class="timeline-content">
-                  <p>
-                    Placeholder text for visualization. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Sed sit amet justo vitae nibh vulputate cursus a at orci. Donec
-                    pharetra odio with placerat.
-                  </p>
+                  <b>Ontario Advanced Diploma</b> <br />
+                  <em>Computer Programming & Analysis</em> <br />
+                  <p>2 semesters deep, still so much to learn.</p>
                 </div>
               </div>
             </div>
@@ -194,10 +201,11 @@
                   <i class="material-symbols-outlined">adjust</i>
                 </div>
                 <div class="timeline-content">
+                  <b>Live Interpreter</b> <br />
+                  <em>Quito, Ecuador</em> <br />
                   <p>
-                    Placeholder text for visualization. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Sed sit amet justo vitae nibh vulputate cursus a at orci. Donec
-                    pharetra odio with placerat.
+                    Respond to phone calls and translate on the spot from english to spanish and
+                    viceversa.
                   </p>
                 </div>
               </div>
@@ -206,11 +214,9 @@
                   <i class="material-symbols-outlined">adjust</i>
                 </div>
                 <div class="timeline-content">
-                  <p>
-                    Placeholder text for visualization. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Sed sit amet justo vitae nibh vulputate cursus a at orci. Donec
-                    pharetra odio with placerat.
-                  </p>
+                  <b>Sales Associate</b> <br />
+                  <em>Toronto, Canada</em> <br />
+                  <p>Attend to customer needs.</p>
                 </div>
               </div>
             </div>
@@ -229,7 +235,6 @@
 
         <!-- Skill Bars -->
         <div class="mt-5 row">
-          <!-- Skill Progress Bars -->
           <div class="col-md-6">
             <div class="skill-bar">
               <div class="skill-label">HTML</div>
@@ -259,6 +264,21 @@
                 ></div>
               </div>
               <div class="skill-percentage">75%</div>
+            </div>
+
+            <div class="skill-bar">
+              <div class="skill-label">Python</div>
+              <div class="progress skill-progress">
+                <div
+                  class="progress-bar bg-color6"
+                  role="progressbar"
+                  style="width: 90%"
+                  aria-valuenow="90"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+              <div class="skill-percentage">90%</div>
             </div>
           </div>
 
@@ -312,13 +332,99 @@
       </div>
     </section>
 
-    <!-- Other sections (consider adding more content inside these) -->
-    <section id="Home"></section>
-    <section id="About"></section>
-    <section id="Experience"></section>
-    <section id="Skills"></section>
-    <section id="Portfolio"></section>
-    <section id="Contact"></section>
+    <!-- Portfolio Section -->
+    <section id="Portfolio">
+      <div class="portfolio-header">
+        <div class="text-container">
+          <span class="behind-text">GALLERY</span>
+          <span class="main-text">PORTFOLIO</span>
+        </div>
+      </div>
+
+      <div class="portfolio-content">
+        <span class="wip-text">Work In Progress!</span>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="Contact">
+      <div class="contact-header">
+        <span class="behind-text">CONTACT</span>
+        <span class="main-text">CONTACT ME</span>
+      </div>
+
+      <!-- Contact Form within a container -->
+      <div class="contact-container">
+        <form id="contactForm" method="POST" action="https://httpbin.org/post">
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email" name="email" placeholder="Your Email" required />
+          <input type="text" name="street" placeholder="Street Address" required />
+          <input type="text" name="city" placeholder="City" required />
+
+          <!-- Province with datalist -->
+          <input list="provinces" name="province" placeholder="Province" required />
+          <datalist id="provinces">
+            <option value="Alberta"></option>
+            <option value="British Columbia"></option>
+            <option value="Manitoba"></option>
+            <option value="New Brunswick"></option>
+            <option value="Newfoundland and Labrador"></option>
+            <option value="Nova Scotia"></option>
+            <option value="Ontario"></option>
+            <option value="Prince Edward Island"></option>
+            <option value="Quebec"></option>
+            <option value="Saskatchewan"></option>
+            <option value="Northwest Territories"></option>
+            <option value="Nunavut"></option>
+            <option value="Yukon"></option>
+          </datalist>
+
+          <!-- Postal Code with regex pattern for Canadian Postal Codes -->
+          <input
+            type="text"
+            pattern="[A-Za-z][0-9][A-Za-z] ?[0-9][A-Za-z][0-9]"
+            name="postalCode"
+            placeholder="Postal Code"
+            required
+          />
+
+          <!-- Reason Dropdown -->
+          <select id="reasonDropdown" name="reason" required>
+            <option value="jobOffer">Job Offer</option>
+            <option value="school">School</option>
+            <option value="other">Other</option>
+          </select>
+
+          <!-- Extra Input for 'Other' Reason -->
+          <div id="otherTopicDiv" style="display: none">
+            <input type="text" id="otherTopic" name="otherTopic" placeholder="Specify Reason" />
+          </div>
+
+          <!-- Large Textarea for the Message -->
+          <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+
+          <!-- Preferred Method of Contact -->
+          <label for="contactMethod">Preferred Contact Method:</label>
+          <select name="contactMethod" id="contactMethod">
+            <option value="email">Email</option>
+            <option value="phone">Phone</option>
+          </select>
+
+          <!-- Phone Input (Initially Hidden) -->
+          <div id="phoneInputDiv" style="display: none">
+            <input type="tel" name="phone" id="phone" placeholder="Your Phone Number" />
+          </div>
+
+          <button type="submit">Send Message</button>
+        </form>
+      </div>
+    </section>
+
+    <!-- Scroll to top button -->
+    <button id="scrollToTop" style="display: none; position: fixed; bottom: 20px; right: 20px; z-index: 1000">
+      <span class="material-symbols-outlined">&#xe5d8;</span> 
+  </button>
+  
 
     <!-- Libraries and Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -329,7 +435,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <script src="./js/typed-config.js" async></script>
-    <script src="./js/scripts.js" async></script>
+    <script src="./js/typed-config.js"></script>
+    <script src="./js/scripts.js"></script>
   </body>
 </html>
