--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
       href="https://fonts.googleapis.com/css2?family=Moirai+One&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,100,0,200">
+
 
     <!-- Stylesheets -->
     <link
@@ -421,11 +423,11 @@
     </section>
 
     <!-- Scroll to top button -->
-    <button id="scrollToTop" style="display: none; position: fixed; bottom: 20px; right: 20px; z-index: 1000">
-      <span class="material-symbols-outlined">&#xe5d8;</span> 
+    <button id="scrollToTop" style="display: block; position: fixed; bottom: 20px; right: 20px; z-index: 9999">
+      <span class="material-symbols-outlined">&#xeacf;</span> 
   </button>
   
-
+  
     <!-- Libraries and Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
