--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
             <div class="buttons">
               <a href="path_to_your_cv.pdf" class="btn btn-custom" download>Download CV</a>
               <a
-                href="https://www.youtube.com/watch?v=_AaB4w0JcVs&t=4s"
+                href="https://www.youtube.com/watch?v=ktNZgdFREO8"
                 class="video-link"
                 target="_blank"
               >
